--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-dom": "^18.3.1",
     "react-medium-image-zoom": "^5.2.9",
     "react-router-dom": "^6.26.1",
-    "react-scroll": "^1.9.0"
+    "react-scroll": "^1.9.0",
+    "sitemap-generator": "^8.5.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
